--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,59 @@
-@import "tailwindcss";
+@import "tailwindcss/preflight";
+@import "tailwindcss/utilities";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.embla {
+  overflow: hidden;
+}
+.embla__container {
+  display: flex;
+}
+.embla__slide {
+  flex: 0 0 100%;
+  min-width: 0;
+}
+h1{
+    background-color: #1a1a1a;
+    color: white;
+    font-size: 1rem;
+    left: 50%;
+    z-index: 100;
+    padding: 0.2rem;
+    text-align: center;
+    width: 100%;
+} 
+a{
+    font-size: 1rem;
+    color: rgb(41, 161, 28);
+    text-decoration: none;
+    text-transform: uppercase;
+    margin: 1rem;
+}
+a:hover{
+    color: #ccc;
+}
+h2{
+    background-color: #1a1a1a;
+    padding: 0.3rem;
+    border-bottom-right-radius: 10px;
+}
+.embla__slide__inner{
+    position: relative;
+}
+.box{
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem;
+}
+.image{
+    margin: 0 auto;
+    width: 500px;
+    height: 800px;
+    border-radius: 10px;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+@media (max-width: 768px) {
+    .image{
+        height: 500px;
+    }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
